Fix BlastRadiusCommandTest when running with r8lib.jar
Change-Id: I95c966e00121454d1845c9e8544a13fcadc24bc0